Fix some charts not showing loading state

--- a/src/web/src/app.css
+++ b/src/web/src/app.css
@@ -9,3 +9,7 @@
 .h-128 {
 	height: 32rem;
 }
+
+body {
+	font-family: 'PT Sans', serif;
+}
